--- a/account-deletion.html
+++ b/account-deletion.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-permalink: /data-deletion
+permalink: /account-deletion
 title: "Account and Data Deletion - Trade Audit App"
 sitemap: false
 author_profile: false
 ---
-How to delete your Trade Audit App delete and data.
+How to delete your Trade Audit App account and data.
