--- a/account-deletion.html
+++ b/account-deletion.html
@@ -6,3 +6,9 @@ sitemap: false
 author_profile: false
 ---
 How to delete your Trade Audit App account and data.
+
+<img src="/assets/images/account-deletion/account-deletion-1.jpg" alt="Application Side Drawer">
+
+<img src="/assets/images/account-deletion/account-deletion-2.jpg" alt="Account Page">
+
+<img src="/assets/images/account-deletion/account-deletion-3.jpg" alt="Delete Account Button">
