--- a/account-deletion.html
+++ b/account-deletion.html
@@ -5,10 +5,23 @@ title: "Account and Data Deletion - Trade Audit App"
 sitemap: false
 author_profile: false
 ---
-How to delete your Trade Audit App account and data.
+<h1>How to delete your Trade Audit App account and data.</h1>
 
-<img src="/assets/images/account-deletion/account-deletion-1.jpg" alt="Application Side Drawer">
+Trade Audit App allows user account deletion within the app.
 
-<img src="/assets/images/account-deletion/account-deletion-2.jpg" alt="Account Page">
-
-<img src="/assets/images/account-deletion/account-deletion-3.jpg" alt="Delete Account Button">
+<img src="/assets/images/account-deletion/account-deletion-1.jpg" alt="Application Side Drawer" style="width: 400px;">
+<div>
+    <h2>Open the left side navigation</h2>
+    This will open the <strong>Account Page</strong>
+</div>
+<br>
+<img src="/assets/images/account-deletion/account-deletion-2.jpg" alt="Account Page" style="width: 400px;">
+<div>
+    <h2>On the Account Page</h2>
+    Click the <strong>Delete Account</strong> button.
+</div>
+<br>
+<img src="/assets/images/account-deletion/account-deletion-3.jpg" alt="Delete Account Button" style="width: 400px;">
+<div>
+    <h2>This screen will delete all user data.</h2>
+</div>
