--- a/account-deletion.html
+++ b/account-deletion.html
@@ -9,6 +9,14 @@ author_profile: false
 
 Trade Audit App allows user account deletion within the app.
 
+For information about the types of data associated with a Trade Audit account, review the
+<a href="/privacy-policy" alt="Privacy Policy">Privacy Policy</a>.
+
+Deleting a Trade Audit account will immediately delete all user added information, with the exception of:
+<ul>
+    <li>Access logs, including IP address</li>
+</ul>
+
 <img src="/assets/images/account-deletion/account-deletion-1.jpg" alt="Application Side Drawer" style="width: 400px;">
 <div>
     <h2>Open the left side navigation</h2>
