--- a/account-deletion.html
+++ b/account-deletion.html
@@ -15,6 +15,8 @@ For information about the types of data associated with a Trade Audit account, r
 Deleting a Trade Audit account will immediately delete all user added information, with the exception of:
 <ul>
     <li>Access logs, including IP address</li>
+    <li>User feedback explicity submitted by the user account through the Trade Audit App</li>
+    <li>Crash logs and general system information, and anonymized performance information</li>
 </ul>
 
 <img src="/assets/images/account-deletion/account-deletion-1.jpg" alt="Application Side Drawer" style="width: 400px;">
