--- a/account-deletion.html
+++ b/account-deletion.html
@@ -12,26 +12,41 @@ Trade Audit App allows user account deletion within the app.
 For information about the types of data associated with a Trade Audit account, review the
 <a href="/privacy-policy" alt="Privacy Policy">Privacy Policy</a>.
 
-Deleting a Trade Audit account will immediately delete all user added information, with the exception of:
-<ul>
-    <li>Access logs, including IP address</li>
-    <li>User feedback explicity submitted by the user account through the Trade Audit App</li>
-    <li>Crash logs and general system information, and anonymized performance information</li>
-</ul>
+<p>
+    Deleting a Trade Audit account will immediately delete all user added information, with the exception of:
+    <ul>
+        <li>Access logs, including IP address</li>
+        <li>User feedback explicity submitted by the user account through the Trade Audit App</li>
+        <li>Crash logs and general system information, and anonymized performance information</li>
+    </ul>
+</p>
 
-<img src="/assets/images/account-deletion/account-deletion-1.jpg" alt="Application Side Drawer" style="width: 400px;">
-<div>
-    <h2>Open the left side navigation</h2>
-    This will open the <strong>Account Page</strong>
+<style>
+    .step > img {
+        width: 400px;
+        float: left;
+    }
+    .step > div {
+        width: 400px;
+    }
+</style>
+<div class="step">
+    <img src="/assets/images/account-deletion/account-deletion-1.jpg" alt="Application Side Drawer">
+    <div>
+        <h2>Open the left side navigation</h2>
+        This will open the <strong>Account Page</strong>
+    </div>
 </div>
-<br>
-<img src="/assets/images/account-deletion/account-deletion-2.jpg" alt="Account Page" style="width: 400px;">
-<div>
-    <h2>On the Account Page</h2>
-    Click the <strong>Delete Account</strong> button.
+<div class="step">
+    <img src="/assets/images/account-deletion/account-deletion-2.jpg" alt="Account Page">
+    <div>
+        <h2>On the Account Page</h2>
+        Click the <strong>Delete Account</strong> button.
+    </div>
 </div>
-<br>
-<img src="/assets/images/account-deletion/account-deletion-3.jpg" alt="Delete Account Button" style="width: 400px;">
-<div>
-    <h2>This screen will delete all user data.</h2>
+<div class="step">
+    <img src="/assets/images/account-deletion/account-deletion-3.jpg" alt="Delete Account Button">
+    <div>
+        <h2>This screen will delete all user data.</h2>
+    </div>
 </div>
