--- a/account-deletion.html
+++ b/account-deletion.html
@@ -22,9 +22,14 @@ For information about the types of data associated with a Trade Audit account, r
 </p>
 
 <style>
+    .step {
+        display: flex;
+    }
     .step > img {
         width: 400px;
         float: left;
+        border-radius: 10px;
+        margin-right: 20px;
     }
     .step > div {
         width: 400px;
