--- a/account-deletion.html
+++ b/account-deletion.html
@@ -24,15 +24,17 @@ For information about the types of data associated with a Trade Audit account, r
 <style>
     .step {
         display: flex;
+        flex-wrap: wrap-reverse;
+        margin-bottom: 1em;
     }
     .step > img {
-        width: 400px;
-        float: left;
+        width: 280px;
         border-radius: 10px;
         margin-right: 20px;
+        border: 1px solid black;
     }
     .step > div {
-        width: 400px;
+        margin-top: 2em;
     }
 </style>
 <div class="step">
