--- a/_pages/index.html
+++ b/_pages/index.html
@@ -5,8 +5,7 @@ title: "Trade Audit App for Social Media"
 sitemap: true
 author_profile: false
 ---
-
-{% include header.html %}
+<h1 class="display-6 fw-bold text-center">Trade Audit App</h1>
 
 <div style="text-align:center;text-justify:inter-word;" class="lead mt-4 mb-2">
   <p>
@@ -29,10 +28,6 @@ author_profile: false
     ✅ Find out before you invest.
   </h2>
 </div>
-
-{% include influencerlink.html %}
-
-{% include integrations.html %}
 
 {% include influencerlink.html %}
 
