--- a/_pages/index.html
+++ b/_pages/index.html
@@ -5,25 +5,27 @@ title: "Trade Audit App for Social Media"
 sitemap: true
 author_profile: false
 ---
-<h1 class="display-6 fw-bold text-center">Trade Audit App</h1>
+<h1 class="display-6 fw-bold text-center">What is Trade Audit?</h1>
 
 <div style="text-align:center;text-justify:inter-word;" class="lead mt-4 mb-2">
   <p>
     Social media <span class="fw-bold">"financial professionals"</span> and <span class="fw-bold">"macro analysts"</span> claim<br>
     to know what stocks to buy and how investments can make you money. But!
   </p>
-  <p class="mt-5 fw-bold" style="font-style: italic;">
-    ❌ What is their full track record?
-  </p>
-  <p class="mt-2 fw-bold" style="font-style: italic;">
-    ❌ Are they accurate?
-  </p>
-  <p class="mt-2 fw-bold" style="font-style: italic;">
-    ❌ Do they admit when they are wrong?
-  </p>
-  <p class="mt-2 fw-bold" style="font-style: italic;">
-    ❌ Is their knowledge even for real?
-  </p>
+  <div style="display:inline-block;text-align:left">
+    <p class="mt-5 fw-bold" style="font-style: italic;">
+      ❌ What is their full track record?
+    </p>
+    <p class="mt-2 fw-bold" style="font-style: italic;">
+      ❌ Are they accurate?
+    </p>
+    <p class="mt-2 fw-bold" style="font-style: italic;">
+      ❌ Do they admit when they are wrong?
+    </p>
+    <p class="mt-2 fw-bold" style="font-style: italic;">
+      ❌ Is their knowledge even for real?
+    </p>
+  </div>
   <h2 class="mt-5 mb-5 fw-bold">
     ✅ Find out before you invest.
   </h2>
