index integration links

--- a/_pages/index.html
+++ b/_pages/index.html
@@ -36,6 +36,7 @@ title: "Trade Audit App for Social Media"
   <a
     class="btn btn-secondary"
     href="{{ navitem.url }}"
+    style="width:140px;margin-bottom:4px;"
   >
     <img
       src="{{ navitem.img }}"
