--- a/_pages/index.html
+++ b/_pages/index.html
@@ -47,4 +47,6 @@ title: "Trade Audit App for Social Media"
   {% endfor %}
 </div>
 
+<h1 class="display-6 fw-bold text-center mt-5">Which Trades Made Money?</h1>
+
 {% include influencerlink.html %}
