--- a/_pages/index.html
+++ b/_pages/index.html
@@ -4,23 +4,22 @@ title: "Trade Audit App for Social Media"
 ---
 <h1 class="display-6 fw-bold text-center">What is Trade Audit?</h1>
 
-<div style="text-align:center;text-justify:inter-word;" class="lead mt-4 mb-2">
+<div class="lead mt-4 mb-2 text-center" style="text-justify:inter-word;">
   <p>
-    Social media <span class="fw-bold" style="font-style: italic;">financial professionals</span> and
-    <span class="fw-bold" style="font-style: italic;">macro analysts</span> claim<br>
-    to know what stocks to buy and how investments can make you money. But!
+    Social media <span class="fw-bold fst-italic">financial professionals</span> and
+    <span class="fw-bold fst-italic">macro analysts</span> claim to know what stocks to buy.
   </p>
   <div style="display:inline-block;text-align:left">
-    <p class="mt-5 fw-bold" style="font-style: italic;">
+    <p class="mt-3 fw-bold fst-italic">
       ❌ What is their full track record?
     </p>
-    <p class="mt-2 fw-bold" style="font-style: italic;">
+    <p class="mt-2 fw-bold fst-italic">
       ❌ Are they accurate?
     </p>
-    <p class="mt-2 fw-bold" style="font-style: italic;">
+    <p class="mt-2 fw-bold fst-italic">
       ❌ Do they admit when they are wrong?
     </p>
-    <p class="mt-2 fw-bold" style="font-style: italic;">
+    <p class="mt-2 fw-bold fst-italic">
       ❌ Is their knowledge even for real?
     </p>
   </div>
@@ -29,7 +28,7 @@ title: "Trade Audit App for Social Media"
   </h2>
 </div>
 
-<div class="mb-5" style="text-align:center;">
+<div class="mb-5 text-center">
   <h4 class="mb-4">Import Recommendations Made on Social Media,<br>and Track Trade Performance.</h4>
   {% assign integrations = site.navigation | where: "key", "integrations" | first %}
   {% for navitem in integrations.links %}
