--- a/_pages/index.html
+++ b/_pages/index.html
@@ -33,15 +33,22 @@ title: "Trade Audit App for Social Media"
   {% assign integrations = site.navigation | where: "key", "integrations" | first %}
   {% for navitem in integrations.links %}
   <a
-    class="btn btn-secondary"
+    class="btn btn-secondary integration_logo"
     href="{{ navitem.url }}"
     style="width:140px;margin-bottom:4px;"
   >
+    {% if navitem.has_text %}
     <img
-      src="{{ navitem.img }}"
-      alt="{{ navitem.label | strip_html }}"
+        src="{{ navitem.img }}"
+        alt="{{ navitem.label | strip_html }}"
     >
-    {{ navitem.label }}
+    <span style="color:{{ navitem.color }};">{{ navitem.label }}</span>
+    {% else %}
+    <img
+        src="{{ navitem.img }}"
+        alt="{{ navitem.label | strip_html }}"
+    >
+    {% endif %}
   </a>
   {% endfor %}
 </div>
