--- a/_pages/rankings.html
+++ b/_pages/rankings.html
@@ -1,6 +1,7 @@
 ---
 permalink: /rankings
 title: "Trade Audit Influencer Rankings"
+viewport: "width=1024, initial-scale=1"
 ---
 
 <h1 class="display-6 fw-bold text-center">Influencer Rankings</h1>
